--- a/app/(private routes)/notes/[id]/NoteDetails.module.css
+++ b/app/(private routes)/notes/[id]/NoteDetails.module.css
@@ -1,17 +1,30 @@
-.container {
+/* .container {
+    
     max-width: 800px;
     min-width: 500px;
+
     margin: 32px auto;
     padding: 24px;
     background-color: #ffffff;
     border-radius: 8px;
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.05);
-}
+} */
 
 .item {
     display: flex;
     flex-direction: column;
     gap: 16px;
+    max-width: 800px;
+    min-width: 500px;
+
+    margin: 32px auto;
+    padding: 24px;
+    background-color: #ffffff;
+    border-radius: 8px;
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.05);
+
+
+
 }
 
 .header {
